--- a/frontend-service/src/app/components/products/products.component.html
+++ b/frontend-service/src/app/components/products/products.component.html
@@ -24,6 +24,7 @@
       </ul>
     </div>
     <div class="category-list">
+      Category Id [SELECTED]: {{product_category.value }}
       <table class="table table-hover">
         <tr>
           <th>Id</th>
